@@ -1,3 +1,12 @@
+2011-11-09  Kentaro Hara  <haraken@chromium.org>
+
+        Unreviewed, rebaseline run-bindings-tests results.
+
+        * bindings/scripts/test/JS/JSTestNamedConstructor.cpp:
+        (WebCore::JSTestNamedConstructorConstructor::getOwnPropertyDescriptor):
+        (WebCore::JSTestNamedConstructor::getOwnPropertyDescriptor):
+        * bindings/scripts/test/JS/JSTestNamedConstructor.h:
+
 2011-11-09  Alexandre Elias  <aelias@google.com>
 
         [chromium] Add draw-time scale delta to compositor thread
